# simple_p2p

./: Cargo.toml  README.md
src/: logger.rs  main.rs  message.rs  peer.rs
src/peer/: peers_map.rs  peers_storage.rs
