[package]
name = "simple_p2p"
version = "0.1.0"
authors = ["0x009922 <a.marcius26@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = "0.11"
serde = "1.0.125"
bincode = "1.3.1"
clap = "2.33.3"
petname = "1.1.0"